# workflow

./: .gitignore  Cargo.toml  Makefile  README.md  go.mod  go.sum  main.go
example/: config.toml
src/: main.rs
src/google-auth/: main.rs
src/terminal/: main.rs
