[package]
name = "workflow"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "google-auth"
path = "src/google-auth/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding = "2.3.2"
hmac-sha1 = "0.1.3"
toml = "0.5"
serde_derive = "1.0.142"
serde = "1.0.97"